force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/MPM4_BASE__Milestone1_Milestone__c.object-meta.xml
<CustomObject>
    <description>Passage Technology - Milestones PM+ Free Edition - Milestones are significant events in the life-cycle of a Project. You can also use them to track project phases. Milestones can have tasks and sub-milestones associated with them.</description>
    <label>Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>