force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Actual_Expense_From_Tasks__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Actual_Expense_From_Tasks__c</fullName>
    <inlineHelpText>Calculated from expense records related to tasks on this milestone</inlineHelpText>
    <label>Actual Expense From Tasks</label>
    <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Total_Expense__c</summarizedField>
    <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>