force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Complete__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This signifies that this milestone has been completed.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>