force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Complete_Tasks_in_Tasks__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Complete_Tasks_in_Tasks__c</fullName>
    <inlineHelpText>Number of complete tasks related to this milestone</inlineHelpText>
    <label>Complete Tasks (in Tasks)</label>
    <summaryFilterItems>
        <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>