force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Deadline__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Deadline__c</fullName>
    <inlineHelpText>The date that this deadline needs to be finished by.</inlineHelpText>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>