force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Description__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Description__c</fullName>
    <inlineHelpText>A general description of the milestone.</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>