force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Duration__c</fullName>
    <formula>(MPM4_BASE__Deadline__c -  MPM4_BASE__Kickoff__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>