force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Estimated_Hours_From_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Estimated_Hours_From_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated from tasks on child milestones. Please Note: This field will not be calculated if the &#39;Parent Milestone&#39; lookup field is not used.</inlineHelpText>
    <label>Estimated Hours From Sub-Milestones</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>