force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Expense_Budget__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Expense_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The expense budget for the milestone.</inlineHelpText>
    <label>Milestone Expense Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>