force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Expense_Budget_from_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Expense_Budget_from_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The expense budget all the sub milestones of this milestone. Please Note: This field will not be calculated if the &#39;Parent Milestone&#39; lookup field is not used.</inlineHelpText>
    <label>Expense Budget from Sub-Milestones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>