force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Internal__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>