force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Kickoff__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Kickoff__c</fullName>
    <inlineHelpText>When should this milestone kickoff?</inlineHelpText>
    <label>Kickoff</label>
    <type>Date</type>
</CustomField>