force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Late_Tasks_in_Tasks_2__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Late_Tasks_in_Tasks_2__c</fullName>
    <inlineHelpText>How many tasks are late?</inlineHelpText>
    <label>Late Tasks (in Tasks)2</label>
    <summaryFilterItems>
        <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Complete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Days_Late__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>