force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Milestone_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Milestone_Unique_Number__c</fullName>
    <inlineHelpText>Do not update this field value. Milestones PM+ will update this automatically.</inlineHelpText>
    <label>Milestone Unique Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>