force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Okay_to_Reparent__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Okay_to_Reparent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
    <label>Okay to Reparent</label>
    <type>Checkbox</type>
</CustomField>