force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Open_Late_Blocked_Tasks__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Open_Late_Blocked_Tasks__c</fullName>
    <formula>IF( max( MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Late_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c) &gt; 0,
IMAGE(&quot;http://chart.apis.google.com/chart?chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Late_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c)) &amp; &quot;&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(MPM4_BASE__Total_Open_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(MPM4_BASE__Total_Late_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(MPM4_BASE__Total_Open_Tasks__c/ max(MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c, MPM4_BASE__Total_Late_Tasks__c) * 100)&amp;&quot;|&quot;&amp; TEXT(MPM4_BASE__Total_Late_Tasks__c / max(MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c, MPM4_BASE__Total_Late_Tasks__c) * 100) &amp;&quot;|&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Tasks__c/ max(MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c, MPM4_BASE__Total_Late_Tasks__c) * 100) , &quot;Project Status, Open Tasks, Late Tasks &amp; Blocked Tasks&quot;),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open, Late &amp; Blocked Tasks  - Deprecated</label>
    <type>Text</type>
</CustomField>