force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Parent_Milestone__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Parent_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
    <label>Parent Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.MPM4_BASE__Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Parent_Milestone__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Parent Milestones must be part of the same project as the child milestone.  Also, Parent Milestone cannot also be a Child Milestone.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Child Milestones</relationshipLabel>
    <relationshipName>Child_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>