force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Parent_Milestone_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Parent_Milestone_Import_Id__c</fullName>
    <label>Parent Milestone Import Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>