force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Predecessor_Milestone__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Predecessor_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The milestone which must be complete before you start this one. The Predecessor Milestone end date must be before the current Milestone start date.</inlineHelpText>
    <label>Predecessor Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.MPM4_BASE__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Successor Milestones</relationshipLabel>
    <relationshipName>Successor_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>