force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The project this milestone is assigned to. If this is a sub-milestone this field is empty.</inlineHelpText>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Project_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>