force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Project_Creation_Context__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Creation_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Creation Context</label>
    <type>Checkbox</type>
</CustomField>