force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Project_Deadline__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Deadline__c</fullName>
    <formula>MPM4_BASE__Project__r.MPM4_BASE__Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Deadline</label>
    <type>Date</type>
</CustomField>