force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Project_Kickoff_Offset__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Kickoff_Offset__c</fullName>
    <formula>NULLVALUE(MPM4_BASE__Kickoff__c -  MPM4_BASE__Project__r.MPM4_BASE__Kickoff__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many days after project kickoff does this milestone kickoff?</inlineHelpText>
    <label>Project Kickoff Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>