force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Project_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Owner_Email__c</fullName>
    <label>Project Owner Email</label>
    <type>Email</type>
</CustomField>