force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Task_Sync_Id__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Task_Sync_Id__c</fullName>
    <label>Task Sync Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>