force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Total_Complete_Tasks__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Complete_Tasks__c</fullName>
    <formula>MPM4_BASE__Complete_Tasks_in_Tasks__c  +  MPM4_BASE__Complete_Tasks_in_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Complete Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>