force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Estimated_Hours__c</fullName>
    <formula>MPM4_BASE__Estimated_Hours_From_Tasks__c + MPM4_BASE__Estimated_Hours_From_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
    <label>Total Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>