force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Total_Expense_Balance__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Expense_Balance__c</fullName>
    <formula>MPM4_BASE__Total_Estimated_Expense__c - MPM4_BASE__Total_Actual_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as total estimated expense - total actual expense</inlineHelpText>
    <label>Total Expense Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>