force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Total_Expense_Budget__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Expense_Budget__c</fullName>
    <formula>MPM4_BASE__Expense_Budget__c +  MPM4_BASE__Expense_Budget_from_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as expense budget + expense budget from child milestones</inlineHelpText>
    <label>Total Expense Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>