force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Total_Hours_Balance__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Hours_Balance__c</fullName>
    <formula>MPM4_BASE__Total_Estimated_Hours__c - MPM4_BASE__Total_Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as total estimated hours - total actual hours</inlineHelpText>
    <label>Total Hours Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>